Add "Load More" button for journal entries with pagination support

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Voice Journal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="button.css">
 </head>
 <body>
     <h1>Journal-Einträge</h1>
@@ -21,6 +22,7 @@
         <div id="journal-entries" class="chat-container">
             <!-- Journal-Einträge werden hier dynamisch eingefügt -->
         </div>
+        <button id="load-more-button" style="display: none;">Mehr laden</button>
     </div>
 
     <!-- Edit Modal -->
