Add date and time input to edit modal for journal entries

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h2>Eintrag bearbeiten</h2>
+            <label for="edit-date" style="display:block; margin-bottom: 5px;">Datum & Uhrzeit:</label>
+            <input type="datetime-local" id="edit-date">
             <textarea id="edit-content" rows="10"></textarea>
             <div class="modal-actions">
                 <button id="save-button">Speichern</button>
