--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="modal.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="categories.css">
+    <link rel="stylesheet" href="settings.css">
 </head>
 <body>
     <h1>Journal-Einträge</h1>
 
     <div class="container">
+        <div class="settings">
+            <label for="api-url">API Host:</label>
+            <input type="text" id="api-url" placeholder="localhost">
+            <button id="refresh-api">Verbinden</button>
+        </div>
+
         <div class="controls">
             <label for="category-select">Kategorie auswählen:</label>
             <select id="category-select">
