Add start and end datetime inputs to edit modal for journal entries

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h2 id="modal-title">Eintrag bearbeiten</h2>
-            <label for="edit-date" style="display:block; margin-bottom: 5px;">Datum & Uhrzeit:</label>
+            <label for="edit-date" style="display:block; margin-bottom: 5px;">Startzeit:</label>
             <input type="datetime-local" id="edit-date">
+
+            <label for="edit-end-date" style="display:block; margin-bottom: 5px;">Endzeit:</label>
+            <input type="datetime-local" id="edit-end-date">
             
             <label style="display:block; margin-bottom: 5px;">Kategorien:</label>
             <div id="edit-categories" class="categories-container">
