Add delete functionality to journal entries with modal integration

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <textarea id="edit-content" rows="10"></textarea>
             <div class="modal-actions">
                 <button id="save-button">Speichern</button>
+                <button id="delete-button">Löschen</button>
                 <button id="cancel-button">Abbrechen</button>
             </div>
         </div>
