--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="container" style="position: relative;">
         <button id="settings-toggle" class="settings-toggle" title="Einstellungen">⚙️</button>
         <div id="settings-panel" class="settings-panel">
-            <label for="api-url">API Host:</label>
+            <label for="page-size">Page Size:</label>
+            <input type="number" id="page-size" value="5" min="1" style="width: 50px;">
+            <label for="api-url" style="margin-left: 10px;">API Host:</label>
             <input type="text" id="api-url" placeholder="localhost">
             <button id="refresh-api">Verbinden</button>
         </div>
