Remove category label from controls section in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="controls">
-            <label for="category-select">Kategorie:</label>
+            <!--label for="category-select">Kategorie:</label-->
             <select id="category-select">
                 <option value="">--Kategorie auswählen--</option>
             </select>
